# whatisinaname

./: .coverage  .gitignore  .openenvignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate.sh
app/: __init__.py  environment.py  grader.py  tasks.py
server/: __init__.py  app.py  hoja_environment.py
tests/: conftest.py  test_environment.py  test_grader.py  test_server.py  test_tasks.py
