# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hoja"
version = "0.1.0"
description = "Hoja environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    "openenv-core[core]>=0.2.2",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m hoja.server.app
server = "hoja.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["hoja", "hoja.app", "hoja.server"]
package-dir = { "hoja" = ".", "hoja.app" = "app", "hoja.server" = "server" }